ping_pong/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ping-pong-app-rollout
  namespace: exercises
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ping-pong-app
  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: cpu-usage-check
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: ping-pong-app
          image: ramanan98/ping-pong:latest
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            httpGet:
              path: /healthz
              port: 8080
