ping_pong/manifests/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-lb-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: ping-pong-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
