ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: ping-pong-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
